--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -12,8 +12,8 @@
 
     <div class="home-links-wrapper animate transparent">
         <div id="home-links" class="animate">
-            <a href="{% url 'registration_register' %}"><div class="home-btn animate-fast">Sign Up</div></a>
-            <a href="{% url 'home:login' %}"><div class="home-btn animate-fast">Log In</div></a>
+            <a href="{% url 'registration_register' %}"><div class="home-btn lobster animate-fast">Sign Up</div></a>
+            <a href="{% url 'home:login' %}"><div class="home-btn lobster animate-fast">Log In</div></a>
         </div>
 
         <i class="home-arrow fa fa-chevron-down levitate transparent animate"></i>
