--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -112,7 +112,7 @@
 
         {% if tags %}
         <!-- Tag Sort -->
-        <div class="sort btn inner-nav-btn peach-btn animate-fast">Sort Tags
+        <div class="sort btn inner-nav-btn peach-btn">Sort Tags
             <div class="sort-options hidden">
                 <div class="tag-sort-title btn green-btn">Title</div>
                 <div class="tag-sort-date btn blue-btn">Date</div>
@@ -334,7 +334,7 @@
                         </div>
 
                         <div class="tag-manager-section" style="margin-bottom: .05em;">
-                            <div class="tag-manager-section-title tasks-title animate">Sort</div>
+                            <div class="tag-manager-section-title tasks-title">Sort</div>
 
                             <div class="tag-sort-options">
                                 <div class="sort-label btn green-btn">Label</div>
