--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -43,7 +43,7 @@
             </a>
 
             <div class="nav-links nav-links-small">
-                <i class="fa fa-bars"></i>
+                <i class="small-nav-icon fa fa-bars animate-fast"></i>
                 {% if logged_in %}
                 <div class="small-nav-container hidden">
                 {% else %}
@@ -52,7 +52,7 @@
                     <a href="{% url 'home:home' %}" class="animate-fast">HOME</a>
                     {% if logged_in %}
                     <div class="profile-nav-link animate-fast">PROFILE
-                        <div class="profile-nav-extra">
+                        <div class="profile-nav-extra hidden">
                             <a href="/u/{{ username }}" class="animate-fast">My Profile</a>
                             <a href="{% url 'home:logout' %}" class="animate-fast">Logout</a>
                         </div>
@@ -68,7 +68,7 @@
                 <a href="{% url 'home:home' %}" class="animate-fast">HOME</a>
                 {% if logged_in %}
                 <div class="profile-nav-link animate-fast">PROFILE
-                    <div class="profile-nav-extra">
+                    <div class="profile-nav-extra hidden">
                         <a href="/u/{{ username }}" class="animate-fast">My Profile</a>
                         <a href="{% url 'home:logout' %}" class="animate-fast">Logout</a>
                     </div>
