--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -77,10 +77,7 @@
         <div class="home-about-section">
             GifCache is written in Python and JavaScript utilizing the Django web framework.
             <a href="https://github.com/kershner/gifcache" class="code-link-wrapper animate">
-                <div class="code-link animate">
-                        <i class="fa fa-github"></i>
-                        View the code!
-                </div>
+                <div class="code-link animate"><i class="fa fa-github"></i>View the code!</div>
             </a>
         </div>
     </div>
