--- a/gifcache/templates/home/login.html
+++ b/gifcache/templates/home/login.html
@@ -2,14 +2,11 @@
 {% block content %}
 {% url 'auth_password_reset' as auth_pwd_reset_url %}
 {% url 'registration_register' as register_url%}
-
 {% if message %}
 <div class="message">{{ message }}</div>
 {% endif %}
-
-<form action="{% url 'home:authenticate' %}" method="post" class="main-form animate">
+<form action="{% url 'home:authenticate' %}" method="post" class="main-form animate" style="margin-top: 3em;">
     <h1 class="title">Log In</h1>
-
     {% csrf_token %}
     {{ form }}
     <input type="submit" class="btn green-btn main-submit" value="Login">
