--- a/gifcache/templates/registration/password_reset_done.html
+++ b/gifcache/templates/registration/password_reset_done.html
@@ -3,10 +3,6 @@
 {% block content %}
 <div class="main-form animate" style="padding: 2em;">
     <h1 class="title animate">Password Reset</h1>
-
-    <p>
-        We have sent you an email with a link to reset your password.
-        Please check your email and click the link to continue.
-    </p>
+    <p>We have sent you an email with a link to reset your password.  Please check your email and click the link to continue</p>
 </div>
 {% endblock %}
