--- a/gifcache/templates/registration/password_reset_form.html
+++ b/gifcache/templates/registration/password_reset_form.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<form method='post' action='' class="main-form no-labels animate">
+<form method='post' action='' class="main-form no-labels animate" style="margin-top: 3em;">
     <h1 class="title">Forgot your password?</h1>
-    <div class="main-text">
-        Enter your email in the form below and we'll send you instructions for creating a new one.
-    </div>
+    <div class="main-text" style="margin: 1em;">Enter your email in the form below and we'll send you instructions for creating a new one.</div>
     {% csrf_token %}
     {{ form }}
     <input type='submit' value="Reset Password" class="btn green-btn main-submit" style="margin-top: 0;">
