--- a/gifcache/templates/users/edit-profile.html
+++ b/gifcache/templates/users/edit-profile.html
@@ -1,24 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-
 <form action="/u/{{ username }}/update-profile/" method="post" class="main-form animate">
     <div class="edit-profile-delete-wrapper hidden">
         <div class="edit-profile-delete">
             <p>Are you sure?  This cannot be undone!</p>
-            <a href="/u/{{ username }}/delete-profile/">
-                <div class="btn red-btn delete-profile">Delete Profile</div>
-            </a>
-
+            <a href="/u/{{ username }}/delete-profile/"><div class="btn red-btn delete-profile">Delete Profile</div></a>
             <div class="btn green-btn cancel-delete-profile">Cancel</div>
         </div>
     </div>
 
-    <div class="delete-profile-button">
-        <p>Delete Profile</p><i class="fa fa-times"></i>
-    </div>
+    <div class="delete-profile-button"><p>Delete Profile</p><i class="fa fa-times"></i></div>
 
     <h1 class="title">Edit Profile</h1>
-
     {% csrf_token %}
     <input type="text" maxlength="40" name="nickname" value="{{ nickname }}" class="main-field animate">
     <div class="label">Nickname</div>
@@ -37,5 +30,4 @@
 
     <input type="submit" class="btn green-btn main-submit" value="Submit">
 </form>
-
 {% endblock content %}
