--- a/gifcache/templates/users/edit-profile.html
+++ b/gifcache/templates/users/edit-profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action="/u/{{ username }}/update-profile/" method="post" class="main-form animate">
+<form action="/u/{{ username }}/update-profile/" method="post" class="main-form animate" style="margin-top: 3em;">
     <div class="edit-profile-delete-wrapper hidden">
         <div class="edit-profile-delete">
             <p>Are you sure?  This cannot be undone!</p>
