--- a/gifcache/templates/registration/registration_complete.html
+++ b/gifcache/templates/registration/registration_complete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="main-form" style="padding: 2em;">
+<div class="main-form" style="margin-top: 3em; padding: 2em;">
     <h1 class="title animate">Account Registration</h1>
     <p>An activation email has been sent.</p>
     <p>Please check your email and click on the link to activate your account.</p>
