--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div class="home-section-grey">
+<div class="home-section-grey" style="padding: 4em 0;">
     <div class="home-bs-title">What is GifCache?</div>
 
     <div class="startup-bs-box">
