Wrote some code to handle non-unique usernames at signup

--- a/gifcache/templates/registration/registration_form.html
+++ b/gifcache/templates/registration/registration_form.html
@@ -3,6 +3,9 @@
 {% if errors %}
 <div class="message">{{ errors }}</div>
 {% endif %}
+{% if error %}
+<div class="message">{{ error }}</div>
+{% endif %}
 <form action="" method="post" class="main-form animate" style="margin-top: 3em;">
     <h1 class="title">Sign Up!</h1>
     <div class="main-text" style="margin-bottom: 1em;">
