--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -30,7 +30,7 @@
         {% endif %}
             <a href="{% url 'home:home' %}">
             <div class="nav-logo pulse">
-                <div id="gif" class="nav-logo-title">GIF</div>
+                <div id="gif" class="nav-logo-title">Gif</div>
                 <div class="nav-logo-circle animate">{% if navgif %}<img src="/static/img/navgif{{ navgif }}.gif">{% endif %}</div>
                 <div id="cache" class="nav-logo-title">Cache</div>
             </div>
@@ -81,7 +81,7 @@
     <div class="footer">
         <a href="{% url 'home:home' %}" class="animate-fast">
             <div class="footer-logo">
-                <div class="footer-gif">GIF</div>
+                <div class="footer-gif">Gif</div>
                 <div class="footer-cache">Cache</div>
             </div>
         </a>
