--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -2,13 +2,16 @@
 {% block content %}
 
 <div id="landing-page" class="home-section animate-bg" style="height: 100vh; padding-top: 2em;">
+    <div class="landing-shade lighter"></div>
+    <div class="landing-shade darker"></div>
+
     <div id="main-logo">
-        <div class="main-logo-gif transparent pulse animate">GIF</div>
+        <div class="main-logo-gif transparent pulse animate">Gif</div>
         <div class="main-logo-img grow"><img src="/static/img/homegif{{ home_gif }}.gif"></div>
         <div class="main-logo-cache transparent pulse animate">Cache</div>
     </div>
 
-    <div class="slogan transparent animate">Store, organize, and display your favorite GIFs</div>
+    <div class="slogan transparent animate">Store, organize, and display your favorite gifs</div>
 
     <div class="home-links-wrapper animate transparent">
         <div id="home-links" class="animate">
@@ -54,7 +57,7 @@
     <div class="home-about">
         <div class="home-about-section">
             <div class="mini-logo">
-                <div class="mini-logo-gif">GIF</div><div class="mini-logo-cache">Cache</div>
+                <div class="mini-logo-gif">Gif</div><div class="mini-logo-cache">Cache</div>
             </div>
             is a service to store and categorize GIF urls.
         </div>
